--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <p>Made with <span><i class="fa fa-heart" aria-hidden="true"></i></span> in Montreal, Canada &mdash; Copyright 2017 &copy; Travel Shelf</p>
+              <p>Coded with <span><i class="fa fa-heart" aria-hidden="true"></i></span> in Montreal, Canada &mdash; Copyright 2017 &copy; Travel Shelf</p>
               <p class="icons">
                 <a href="https://github.com/RichardLitt/the-travel-shelf" class="social"><i class="fa fa-github fa-2x" aria-hidden="true"></i>
                 </a>
