--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	    <div class="row no-gutters container-grid">
 
 	      <div class="col-md-4 portfolio-item">
-	        <a class="portfolio-link" href="https://www.drawnandquarterly.com/">
+	        <a class="portfolio-link" href="bookstores.html">
 	          <div class="caption">
 	            <div class="caption-content">
 	              <h3>Drawn and Quaterly</h3>
