--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 	      </div>
 
 	      <div class="col-md-8 portfolio-item">
-	        <a class="portfolio-link" href="#">
+	        <a class="portfolio-link" href="http://bookmanager.ca/argobks/">
 	          <div class="caption">
 	            <div class="caption-content">
-	              <h3>Bookstore 2</h3>
+	              <h3>Argo Bookshop</h3>
 	              <i class="fa fa-search-plus fa-2x"></i>
 	            </div>
 	          </div>
@@ -121,10 +121,10 @@
 	      </div>
 
 	      <div class="col-md-8 portfolio-item">
-	        <a class="portfolio-link" href="#">
+	        <a class="portfolio-link" href="http://www.bibliophilemontreal.com/">
 	          <div class="caption">
 	            <div class="caption-content">
-	              <h3>Bookstore 3</h3>
+	              <h3>Bibliophile</h3>
 	              <i class="fa fa-search-plus fa-2x"></i>
 	            </div>
 	          </div>
@@ -133,10 +133,10 @@
 	      </div>
 
 	      <div class="col-md-4 portfolio-item">
-	        <a class="portfolio-link" href="#">
+	        <a class="portfolio-link" href="Encore">
 	          <div class="caption">
 	            <div class="caption-content">
-	              <h3>Bookstore 4</h3>
+	              <h3>http://www.encorebooks.ca/</h3>
 	              <i class="fa fa-search-plus fa-2x"></i>
 	            </div>
 	          </div>
@@ -145,10 +145,10 @@
 	      </div>
 
 	      <div class="col-md-4 portfolio-item">
-	        <a class="portfolio-link" href="#">
+	        <a class="portfolio-link" href="http://wordbookstore.ca/">
 	          <div class="caption">
 	            <div class="caption-content">
-	              <h3>Bookstore 5</h3>
+	              <h3>The Word</h3>
 	              <i class="fa fa-search-plus fa-2x"></i>
 	            </div>
 	          </div>
@@ -157,10 +157,10 @@
 	      </div>
 
 	      <div class="col-md-8 portfolio-item">
-	        <a class="portfolio-link" href="#">
+	        <a class="portfolio-link" href="https://lalibrairiedeverdun.com/">
 	          <div class="caption">
 	            <div class="caption-content">
-	              <h3>Bookstore 6</h3>
+	              <h3>Librairie De Verdun</h3>
 	              <i class="fa fa-search-plus fa-2x"></i>
 	            </div>
 	          </div>
