--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 	      </div>
 
 	      <div class="col-md-4 portfolio-item">
-	        <a class="portfolio-link" href="Encore">
+	        <a class="portfolio-link" href="http://www.encorebooks.ca/">
 	          <div class="caption">
 	            <div class="caption-content">
-	              <h3>http://www.encorebooks.ca/</h3>
+	              <h3>Encore</h3>
 	              <i class="fa fa-search-plus fa-2x"></i>
 	            </div>
 	          </div>
