--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-            <p class="description"><span>The Travel Shelf</span> is a joint enterprise by Richard Littauer and students from Les Pitonneux &ndash; LAB12, an alternative bootcamp program in Montréal, Canada. Richard goes to a lot of bookstores, and wanted a way to talk about those bookstores. The students - Vernon, Joanna, Hanie, and Jose - wanted to build a website together.
+            <p class="description"><span>The Travel Shelf</span> is a joint enterprise by Richard Littauer and students from Les Pitonneux &ndash; LAB12, an alternative bootcamp program in Montréal, Canada. Richard goes to a lot of bookstores, and wanted a way to talk about those bookstores. The students - Vernon, Joanna and  Hanie - wanted to build a website together.
             This is the result.</p>
 
             <p>Interested in adding a bookstore, yourself? Want to join the team?
