Modified text size

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="col text-center">
         	<h1 class="display-4 myhero text-center">A Magazine and Index of Beautiful Global Independent Bookstores</h1>
-         	<p class="lead text-center">The Travel Shelf is a curated listing of beautiful, independent bookstores around the world.</p>
+         	<p class="leadText text-center">The Travel Shelf is a curated listing of beautiful, independent bookstores around the world.</p>
 
           	<a href="about.html" class="btn btn-outline-warning btn-lg read"><i class="fa fa-arrow-right"></i> Read More</a>
         </div>
