--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
             <img src="img/vernon.jpg" class="img-fluid rounded-circle avatar" alt="Vernon">
                 <h4>Vernon Lillies</h4>
                 <p class="text-muted">Full Stack <br>Web Developer</p>
-                <p class="bio">Sartorial photo booth salvia single-origin coffee fixie typewriter deep cliche iceland coffee photo booth fixie typewriter.</p>
+                <p class="bio"></p>
                 <p class="icons">
                   <a href="https://github.com/VernL" class="social"><i class="fa fa-github fa-2x" aria-hidden="true"></i>
                   </a>
@@ -149,7 +149,7 @@
             <img src="img/hanie.png" class="img-fluid rounded-circle avatar" alt="Hanie">
                 <h4>Hanie Jafari</h4>
                 <p class="text-muted">Full Stack <br>Web Developer</p>
-                <p class="bio">Sartorial photo booth salvia single-origin coffee fixie typewriter deep cliche iceland coffee photo booth fixie typewriter.</p>
+                <p class="bio"></p>
                 <p class="icons">
                   <a href="https://github.com/ZJaf" class="social"><i class="fa fa-github fa-2x" aria-hidden="true"></i>
                   </a>
